Added content loss
Content loss = Difference between image before and after patch placement

--- a/config.yml
+++ b/config.yml
@@ -20,8 +20,8 @@ lists:
   eval_list: lists/car_dataset_test_12.txt
 
 patch:
-  path: random
-  target_size: None
+  path: patch-1106-litemono-far.jpg
+  target_size: 0.09
   target_disp_sigmoid: 0.999999
   resolution: 256
   patch_augmentation:
@@ -32,12 +32,13 @@ patch:
     contrast: 0.1
 
   loss_weight:
-    disp_loss: 2
-    nps_loss: 1
-    tv_loss: 0.5
+    disp_loss: 1
+    nps_loss: 0.01
+    tv_loss: 0
+    content_loss: 0.5
 
 hyperparameter:
-  num_epoch: 5
+  num_epoch: 10
   learning_rate: 0.01
 
 device: cuda:0
